Build and improve the home page

--- a/z.liangA2-clientside/home.html
+++ b/z.liangA2-clientside/home.html
@@ -7,6 +7,47 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-     
+    <!-- Nav Menu -->
+    <header>
+       <nav>
+           <ul>
+               <li><a href="#">Home</a></li>
+               <li><a href="#">Search Fundraiser</a></li>
+           </ul>
+       </nav>
+   </header>
+   <!-- Welcome-->
+   <section class="welcome">
+       <h1>Welcome to Our Non-Profit Organization</h1>
+       <p>We strive to make the world a better place by helping communities in need. Learn more about our stories and missions below.</p>
+   </section>
+
+   <!-- Inspirational Stories -->
+   <section class="stories">
+       <h2>Inspirational Stories</h2>
+       <p>Meet the people whose lives have been transformed by your generous donations.</p>
+   </section>
+
+   <!-- Contact Information -->
+   <section class="contact">
+       <h2>Contact Us</h2>
+       <p>Email: xxxxxx@gmail.com | Phone: +61 123 456 xxx</p>
+       <p>Address: xxx Charity Lane, Byron Bay, NSW, Australia</p>
+   </section>
+
+   <!-- Active Fundraisers Section -->
+   <section id="fundraisers">
+       <h2>Active Fundraisers</h2>
+       <div id="fundraiser-list">
+           <!-- Fundraiser data for js -->
+       </div>
+   </section>
+
+   <!-- Footer Section -->
+   <footer>
+       <p>&copy; 2024 Non-Profit Organization. All rights reserved.</p>
+   </footer>
+
+   <script src="js/home.js"></script>
 </body>
 </html>
