Build and complete the search page

--- a/z.liangA2-clientside/home.html
+++ b/z.liangA2-clientside/home.html
@@ -11,8 +11,8 @@
     <header>
        <nav>
            <ul>
-               <li><a href="#">Home</a></li>
-               <li><a href="#">Search Fundraiser</a></li>
+               <li><a href="./home.html">Home</a></li>
+               <li><a href="./search.html">Search Fundraiser</a></li>
            </ul>
        </nav>
    </header>
