Add a detail page use Js to fetch API data

--- a/z.liangA2-clientside/fundraiser.html
+++ b/z.liangA2-clientside/fundraiser.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fundraiser Details</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/fundraiser.css">
 </head>
+
 <body>
-    
+    <!-- Nav Menu -->
+    <header>
+        <nav>
+            <ul>
+                <li><a href="./home.html">Home</a></li>
+                <li><a href="./search.html">Search Fundraiser</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <h1>Fundraiser Details</h1>
+
+    <div id="fundraiser-details" class="fundraiser-card">
+        <!-- Load Data for js  -->
+    </div>
+
+    <!-- Donation button -->
+    <button id="donate-button" class="donate-button">Donate</button>
+
+
+    <!--Alart Modal -->
+    <div id="donation-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-button" id="close-button">&times;</span>
+            <p>This feature is under construction</p>
+        </div>
+    </div>
+
+    <script src="js/fundraiser.js"></script>
 </body>
+
 </html>
