--- a/z.liangA2-clientside/search.html
+++ b/z.liangA2-clientside/search.html
@@ -40,7 +40,7 @@
 
             <!-- Search and Clear buttons -->
             <button type="button" onclick="search()">Search</button>
-            <button type="button" class="clear-btn" onclick="clearFormData()">Clear</button>
+            <button type="button" class="clear-btn" onclick="clearChechboxes()">Clear</button>
         </form>
 
         <!-- Error message -->
